--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -8,36 +8,65 @@
     <link th:rel="stylesheet" th:href="@{webjars/font-awesome/5.13.0/css/all.css} "/>
 </head>
 <body>
-<footer class="footer bg-dark text-light ">
-    <div class="mt-5 pt-5 pb-5 footer">
+<!-- TODO: Function to set current nav-item on active -->
+<div th:fragment="header" id="header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-xs-12 about-company">
-                    <h2>Heading</h2>
-                    <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
-                    <p><a href="#"><i class="fas fa-cog fa-spin fa-3x fa-fw"></i></a></p>
-                </div>
-                <div class="col-lg-3 col-xs-12 links">
-                    <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-                    <ul class="m-0 p-0">
-                        <li>- <a href="#">Lorem ipsum</a></li>
-                        <li>- <a href="#">Nam mauris velit</a></li>
-                        <li>- <a href="#">Etiam vitae mauris</a></li>
-                        <li>- <a href="#">Fusce scelerisque</a></li>
-                        <li>- <a href="#">Sed faucibus</a></li>
-                        <li>- <a href="#">Mauris efficitur nulla</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 col-xs-12 location">
-                    <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                    <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
-                    <p class="mb-0"><i class="fas fa-phone mr-3"></i>(541) 754-3010</p>
-                    <p><i class="fas fa-envelope mr-3"></i>info@hsdf.com</p>
+            <a class="navbar-brand" href="/">MKM Webclient</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sorterUpload">Upload from CSV</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"><i class="fab fa-github"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+<div th:fragment="footer">
+    <footer class="footer bg-dark text-light ">
+        <div class="mt-5 pt-5 pb-5 footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-xs-12 about-company">
+                        <h4>Contribution</h4>
+                        <p class="pr-5 text-white-50">
+                            You feel like hack some lines of Code yourself?<br>
+                            <strong>Pullrequests Welcome!</strong><br>
+                            You would like me to implement an additional feature or you have found a Bug?
+                            <strong>Open a new Issue</strong><br>
+                        </p>
+                        <p><a href="https://github.com/KZellweger/mkmWebClient"><i class="fab fa-github fa-3x"></i></a></p>
+                    </div>
+                    <div class="col-lg-5 col-xs-12 about-company">
+                        <h4>Donation</h4>
+                        <p class="pr-5 text-white-50">
+                            You are extraordinary pleased with the tool?<br>
+                            Consider to buy me Coffee (5$) or a Gin Tonic (10$)<br>
+                        </p>
+                        <p><a href="https://paypal.me/ThankYouKevin"><i class="fab fa-paypal fa-1x"></i></a></p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
+</div>
 
 <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
