--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,8 @@
 <body>
 
 <!-- Navigation -->
+<div th:insert="fragments/fragments.html :: header"></div>
+<!--
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
         <a class="navbar-brand" href="/">MKM Webclient</a>
@@ -33,11 +35,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link"><i class="fab fa-github"></i></a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
-
+-->
 <!-- CardForm -->
 <div class="container">
     <form method="post" th:object="${card}">
