Read CSV File and Display Cards in Table

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -23,10 +23,10 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sorterUpload">Upload from CSV</a>
+                        <a class="nav-link" href="/cards">Cards</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="/sorterUpload">Upload from CSV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
