--- a/src/main/resources/templates/cards.html
+++ b/src/main/resources/templates/cards.html
@@ -11,31 +11,84 @@
 <!-- Navigation -->
 <div th:insert="fragments/fragments.html :: header"></div>
 
-<div>
-    <table class="table table-hover">
-        <tr>
-            <th>Set</th>
-            <th>Rarity</th>
-            <th>Title</th>
-            <th>Count</th>
-            <th>Price</th>
-            <th>Price Trend</th>
-        </tr>
-        <tr th:each="card : ${cards}">
-            <td th:text="${card.getSet()}"></td>
-            <td th:text="${card.getRarity()}"></td>
-            <td th:text="${card.getTitle()}"></td>
-            <td th:text="${card.getCount()}"></td>
-            <td th:text="${card.getPrice()}"></td>
-            <td th:text="${card.getPrice_trend()}"></td>
-        </tr>
-    </table>
+<div class="container">
+    <row>
+        <form class="form-inline d-flex justify-content-center">
+            <i class="fas fa-search" aria-hidden="true"></i>
+            <input type="text" id="myInput" onkeyup="search()" placeholder="Search" class="form-control"
+                   aria-label="Search">
+        </form>
+    </row>
+    <row>
+        <table class="table table-hover bor" id="myTable">
+            <tr>
+                <th>Set</th>
+                <th>Rarity</th>
+                <th>Title</th>
+                <th>Count</th>
+                <th>Price</th>
+                <th>Price Trend</th>
+            </tr>
+            <tr th:each="card : ${cards}">
+                <td th:text="${card.getSet()}"></td>
+                <td th:text="${card.getRarity()}"></td>
+                <td th:text="${card.getTitle()}"></td>
+                <td><input th:value="${card.getCount()}" type="number" name="inCount" min="0" onchange="valueChanged(this)">
+                </td>
+                <td><label><input th:value="${card.getPrice()}" type="number" name="inPrice" step="0.01"
+                                  min="0.0" onchange="valueChanged(this)">€</label></td>
+                <td><label><input th:value="${card.getPrice_trend()}" type="number" name="inPriceTrend"
+                                  step="0.01" min="0.0" onchange="valueChanged(this)">€</label></td>
+            </tr>
+        </table>
+    </row>
 </div>
 
 
 <div th:insert="fragments/fragments.html :: footer"></div>
+<script th:src="@{assets/datatable/datatables.js}"></script>
 <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
+
+<script>
+    function filterTable(event) {
+        //TODO: Not quite yet but something
+        var filter = event.target.value.toUpperCase();
+        var rows = document.querySelector("#myTable tbody").rows;
+
+        for (var i = 0; i < rows.length; i++) {
+            var firstCol = rows[i].cells[0].textContent.toUpperCase();
+            var secondCol = rows[i].cells[1].textContent.toUpperCase();
+            if (firstCol.indexOf(filter) > -1 || secondCol.indexOf(filter) > -1) {
+                rows[i].style.display = "";
+            } else {
+                rows[i].style.display = "none";
+            }
+        }
+    }
+
+    document.querySelector('#myInput').addEventListener('keyup', filterTable, false);
+</script>
+
+<script>
+    function valueChanged(element) {
+        if (element.value != element.defaultValue) {
+            $(element).attr('style', 'background-color: sandybrown')
+        } else {
+            $(element).attr('style', '')
+        }
+    }
+</script>
+
+<script>$(document).ready(function () {
+    var i = 0;
+    $(':input').each(function () {
+        i++
+        $(this).attr('id', $(this).attr('name') + i)
+    })
+})</script>
+
+
 </body>
 </html>
