remove static js assets

--- a/src/main/resources/templates/cards.html
+++ b/src/main/resources/templates/cards.html
@@ -5,48 +5,78 @@
     <title>MKM Webclient Cards</title>
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.5.0/css/bootstrap.min.css} "/>
     <link th:rel="stylesheet" th:href="@{webjars/font-awesome/5.13.0/css/all.css} "/>
-
 </head>
 <body>
 <!-- Navigation -->
 <div th:insert="fragments/fragments.html :: header"></div>
 
-<div class="container">
-    <row>
-        <form class="form-inline d-flex justify-content-center">
-            <i class="fas fa-search" aria-hidden="true"></i>
-            <input type="text" id="myInput" onkeyup="search()" placeholder="Search" class="form-control"
-                   aria-label="Search">
-        </form>
-    </row>
-    <row>
-        <table class="table table-hover bor" id="myTable">
-            <tr>
-                <th>Set</th>
-                <th>Rarity</th>
-                <th>Title</th>
-                <th>Count</th>
-                <th>Price</th>
-                <th>Price Trend</th>
-            </tr>
-            <tr th:each="card : ${cards}">
-                <td th:text="${card.getSet()}"></td>
-                <td th:text="${card.getRarity()}"></td>
-                <td th:text="${card.getTitle()}"></td>
-                <td><input th:value="${card.getCount()}" type="number" name="inCount" min="0" onchange="valueChanged(this)">
-                </td>
-                <td><label><input th:value="${card.getPrice()}" type="number" name="inPrice" step="0.01"
-                                  min="0.0" onchange="valueChanged(this)">€</label></td>
-                <td><label><input th:value="${card.getPrice_trend()}" type="number" name="inPriceTrend"
-                                  step="0.01" min="0.0" onchange="valueChanged(this)">€</label></td>
-            </tr>
-        </table>
-    </row>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="row py-2 px-5">
+                <form class="form-inline d-flex justify-content-center">
+                    <label class="col-form-label" for="setSearch"><i class="fas fa-search px-2" aria-hidden="true"></i></label>
+                    <input type="text" id="setSearch" onkeyup="search()" placeholder="Set" class="form-control"
+                           aria-label="Search">
+                </form>
+            </div>
+            <div class="row py-2 px-5">
+                <form class="form-inline d-flex justify-content-center">
+                    <label class="col-form-label" for="TitleSearch"><i class="fas fa-search px-2" aria-hidden="true"></i></label>
+                    <input type="text" id="TitleSearch" onkeyup="search()" placeholder="Title" class="form-control"
+                           aria-label="Search">
+                </form>
+            </div>
+            <div class="row py-2 px-5">
+                <form class="form-inline d-flex justify-content-center">
+                    <label class="col-form-label" for="countSearch"><i class="fas fa-search px-2" aria-hidden="true"></i></label>
+                    <input type="text" id="countSearch" onkeyup="search()" placeholder="Count" class="form-control"
+                           aria-label="Search">
+                </form>
+            </div>
+            <div class="row py-2 px-5">
+                <form class="form-inline d-flex justify-content-center">
+                    <label class="col-form-label" for="priceSearch"><i class="fas fa-search px-2" aria-hidden="true"></i></label>
+                    <input type="text" id="priceSearch" onkeyup="search()" placeholder="Price" class="form-control"
+                           aria-label="Search">
+                </form>
+            </div>
+            <div class="row py-2 px-5">
+                <form class="form-inline d-flex justify-content-center">
+                    <label class="col-form-label" for="priceTrendSearch"><i class="fas fa-search px-2" aria-hidden="true"></i></label>
+                    <input type="text" id="priceTrendSearch" onkeyup="search()" placeholder="Price Trend" class="form-control"
+                           aria-label="Search">
+                </form>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <table class="table table-hover bor" id="cardTable">
+                <tr class="d-flex">
+                    <th class="col-md-2">Set</th>
+                    <th class="col-md-2">Rarity</th>
+                    <th class="col-md-2">Title</th>
+                    <th class="col-md-2">Count</th>
+                    <th class="col-md-2">Price</th>
+                    <th class="col-md-2">Price Trend</th>
+                </tr>
+                <tr class="d-flex" th:each="card : ${cards}">
+                    <td class="col-md-2" th:text="${card.getSet()}"></td>
+                    <td class="col-md-2" th:text="${card.getRarity()}"></td>
+                    <td class="col-md-2" th:text="${card.getTitle()}"></td>
+                    <td class="col-md-2"><input class="col-md-9" th:value="${card.getCount()}" type="number" name="inCount" min="0" onchange="valueChanged(this)">
+                    </td>
+                    <td class="col-md-2"><label><input class="col-md-9" th:value="${card.getPrice()}" type="number" name="inPrice" step="0.01"
+                                      min="0.0" onchange="valueChanged(this)">€</label></td>
+                    <td class="col-md-2"><label><input class="col-md-9" th:value="${card.getPrice_trend()}" type="number" name="inPriceTrend"
+                                      step="0.01" min="0.0" onchange="valueChanged(this)">€</label></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
 
 
 <div th:insert="fragments/fragments.html :: footer"></div>
-<script th:src="@{assets/datatable/datatables.js}"></script>
 <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
@@ -55,7 +85,7 @@
     function filterTable(event) {
         //TODO: Not quite yet but something
         var filter = event.target.value.toUpperCase();
-        var rows = document.querySelector("#myTable tbody").rows;
+        var rows = document.querySelector("#cardTable tbody").rows;
 
         for (var i = 0; i < rows.length; i++) {
             var firstCol = rows[i].cells[0].textContent.toUpperCase();
