--- a/src/main/resources/templates/cards.html
+++ b/src/main/resources/templates/cards.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>MKM Webclient Cards</title>
-    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.5.0/css/bootstrap.min.css} "/>
-    <link th:rel="stylesheet" th:href="@{webjars/font-awesome/5.13.0/css/all.css} "/>
+  <meta charset="UTF-8">
+  <title>MKM Webclient Cards</title>
+  <link th:href="@{webjars/bootstrap/4.5.0/css/bootstrap.min.css} " th:rel="stylesheet"/>
+  <link th:href="@{webjars/font-awesome/5.13.0/css/all.css} " th:rel="stylesheet"/>
 
 </head>
 <body>
@@ -12,39 +12,47 @@
 <div th:insert="fragments/fragments.html :: header"></div>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-3 py-3 px-3">
-        <form class="form-inline d-flex justify-content-center">
-            <i class="fas fa-search" aria-hidden="true"></i>
-            <input type="text" id="filter" placeholder="Search" class="form-control"
-                   aria-label="Search">
-        </form>
-        </div>
-        <div class="col-md-9">
-            <table class="table table-hover bor" id="cardTable">
-                <tr class="d-flex">
-                    <th class="col-md-2">Set</th>
-                    <th class="col-md-2">Rarity</th>
-                    <th class="col-md-2">Title</th>
-                    <th class="col-md-2">Count</th>
-                    <th class="col-md-2">Price</th>
-                    <th class="col-md-2">Price Trend</th>
-                </tr>
-                <tr class="d-flex" th:each="card : ${cards}">
-                    <td class="col-md-2" th:text="${card.getSet()}"></td>
-                    <td class="col-md-2" th:text="${card.getRarity()}"></td>
-                    <td class="col-md-2" th:text="${card.getTitle()}"></td>
-                    <td class="col-md-2"><input class="col-md-9" th:value="${card.getCount()}" type="number" name="inCount" min="0" onchange="valueChanged(this)">
-                    </td>
-                    <td class="col-md-2"><label><input class="col-md-9" th:value="${card.getPrice()}" type="number" name="inPrice" step="0.01"
-                                                       min="0.0" onchange="valueChanged(this)"> €</label></td>
-                    <td class="col-md-2"><label><input class="col-md-9" th:value="${card.getPrice_trend()}" type="number" name="inPriceTrend"
-                                                       step="0.01" min="0.0" onchange="valueChanged(this)"> €</label></td>
-                </tr>
-            </table>
-        </div>
-        </div>
+  <div class="row">
+    <div class="col-3 py-3 px-3">
+      <form class="form-inline d-flex justify-content-center">
+        <i aria-hidden="true" class="fas fa-search"></i>
+        <input aria-label="Search" class="form-control" id="filter" placeholder="Search"
+               type="text">
+      </form>
     </div>
+    <div class="col-md-9">
+      <table class="table table-hover bor" id="cardTable">
+        <tr class="d-flex">
+          <th class="col-md-2">Set</th>
+          <th class="col-md-2">Rarity</th>
+          <th class="col-md-2">Title</th>
+          <th class="col-md-2">Count</th>
+          <th class="col-md-2">Price</th>
+          <th class="col-md-2">Price Trend</th>
+        </tr>
+        <tr class="d-flex" th:each="card : ${cards}">
+          <td class="col-md-2" th:text="${card.getSet()}"></td>
+          <td class="col-md-2" th:text="${card.getRarity()}"></td>
+          <td class="col-md-2" th:text="${card.getTitle()}"></td>
+          <td class="col-md-2"><input class="col-md-9" min="0" name="inCount"
+                                      onchange="valueChanged(this)" th:value="${card.getCount()}"
+                                      type="number">
+          </td>
+          <td class="col-md-2"><label><input class="col-md-9" min="0.0"
+                                             name="inPrice" onchange="valueChanged(this)"
+                                             step="0.01"
+                                             th:value="${card.getPrice()}" type="number"> €</label>
+          </td>
+          <td class="col-md-2"><label><input class="col-md-9" min="0.0"
+                                             name="inPriceTrend" onchange="valueChanged(this)"
+                                             step="0.01" th:value="${card.getPrice_trend()}"
+                                             type="number"> €</label>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
 </div>
 
 
@@ -54,47 +62,47 @@
 <script th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
 
 <script>
-    function filterTable(event) {
-        var filter = event.target.value.toUpperCase();
-        var rows = document.querySelector("#cardTable tbody").rows;
-        var td, cell;
+  function filterTable(event) {
+    var filter = event.target.value.toUpperCase();
+    var rows = document.querySelector("#cardTable tbody").rows;
+    var td, cell;
 
-        for (var i = 1; i < rows.length; i++) {
-            rows[i].setAttribute('class',"d-none");
+    for (var i = 1; i < rows.length; i++) {
+      rows[i].setAttribute('class', "d-none");
 
-            td = rows[i].getElementsByTagName("td");
-            for (var j = 0; j < td.length; j++) {
-                cell = rows[i].getElementsByTagName("td")[j];
-                if (cell) {
-                    if (cell.innerHTML.toUpperCase().indexOf(filter) > -1) {
-                        rows[i].setAttribute('class',"d-flex");
+      td = rows[i].getElementsByTagName("td");
+      for (var j = 0; j < td.length; j++) {
+        cell = rows[i].getElementsByTagName("td")[j];
+        if (cell) {
+          if (cell.innerHTML.toUpperCase().indexOf(filter) > -1) {
+            rows[i].setAttribute('class', "d-flex");
 
-                        break;
-                    }
-                }
-            }
+            break;
+          }
         }
+      }
     }
+  }
 
-    document.querySelector('#filter').addEventListener('keyup', filterTable, false);
+  document.querySelector('#filter').addEventListener('keyup', filterTable, false);
 </script>
 
 <script>
-    function valueChanged(element) {
-        if (element.value != element.defaultValue) {
-            $(element).attr('style', 'background-color: sandybrown')
-        } else {
-            $(element).attr('style', '')
-        }
+  function valueChanged(element) {
+    if (element.value != element.defaultValue) {
+      $(element).attr('style', 'background-color: sandybrown')
+    } else {
+      $(element).attr('style', '')
     }
+  }
 </script>
 
 <script>$(document).ready(function () {
-    var i = 0;
-    $(':input').each(function () {
-        i++
-        $(this).attr('id', $(this).attr('name') + i)
-    })
+  var i = 0;
+  $(':input').each(function () {
+    i++
+    $(this).attr('id', $(this).attr('name') + i)
+  })
 })</script>
 
 
