--- a/src/main/resources/templates/sorterUpload.html
+++ b/src/main/resources/templates/sorterUpload.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>MKM Webclient Sorter Upload</title>
-    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.5.0/css/bootstrap.min.css} "/>
-    <link th:rel="stylesheet" th:href="@{webjars/font-awesome/5.13.0/css/all.css} "/>
+  <meta charset="UTF-8">
+  <title>MKM Webclient Sorter Upload</title>
+  <link th:href="@{webjars/bootstrap/4.5.0/css/bootstrap.min.css} " th:rel="stylesheet"/>
+  <link th:href="@{webjars/font-awesome/5.13.0/css/all.css} " th:rel="stylesheet"/>
 </head>
 <body>
 
 <div th:insert="fragments/fragments.html :: header"></div>
 
 <div class="container">
-    <div class="row">
-        <div class="col-lg-8 mt-5">
-            <h2>Upload File Example</h2>
-            <p th:text="${message}" th:if="${message ne null}" class="alert alert-primary"></p>
-            <form method="post" th:action="@{/sorterUpload/upload}" enctype="multipart/form-data">
-                <div class="form-group">
-                    <input type="file" name="file" class="form-control-file">
-                </div>
-                <button type="submit" class="btn btn-primary">Upload File</button>
-            </form>
+  <div class="row">
+    <div class="col-lg-8 mt-5">
+      <h2>Upload File Example</h2>
+      <p class="alert alert-primary" th:if="${message ne null}" th:text="${message}"></p>
+      <form enctype="multipart/form-data" method="post" th:action="@{/sorterUpload/upload}">
+        <div class="form-group">
+          <input class="form-control-file" name="file" type="file">
         </div>
+        <button class="btn btn-primary" type="submit">Upload File</button>
+      </form>
     </div>
+  </div>
 
 </div>
 <div th:insert="fragments/fragments.html :: footer"></div>
 
 <script>
-    document.querySelector('.custom-file-input').addEventListener('change',function(e){
-        var fileName = document.getElementById("exampleInputFile").files[0].name;
-        var nextSibling = e.target.nextElementSibling
-        nextSibling.innerText = fileName
-    })
+  document.querySelector('.custom-file-input').addEventListener('change', function (e) {
+    var fileName = document.getElementById("exampleInputFile").files[0].name;
+    var nextSibling = e.target.nextElementSibling
+    nextSibling.innerText = fileName
+  })
 </script>
 
 <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
